[package]
name = "aoc_2022"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
nohash-hasher = "0.2.0"
regex = { version = "1.7.0", default-features = false, features = ["std", "perf"] }
pathfinding = "4.1.1"
tinyvec = { version = "1.6.0", features = ["rustc_1_40"] }
nom = "7.1.1"
